# MCTS-NC-OCP-THRIFTY

./: .gitignore  README.md  mcts-nc-ocp-thrifty.ipynb  pyproject.toml
presentation/: presentation.tex
report/: literature.bib  report.tex  summary_by_config.csv
report/tables/: summary_table.tex  summary_table_fixed.tex
scripts/: find_best_configs.py  generate_report_tables.py  generate_report_tables_no_pandas.py
