[project]
name = "mcts-nc-parallel-variants"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13 "
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numba>=0.63.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "py-cpuinfo>=9.0.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
